# pyrl

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  getting-started.rst  index.rst
notebooks/: 01-q-learning.ipynb  q-learning-01.ipynb
pyrl/: __init__.py  display.py
pyrl/envs/: __init__.py  prisonguard.py
pyrl/modeling/: __init__.py  ppo_train.py  predict.py  q_train.py  tune.py  value_train.py
