[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrl"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
    "ale-py",
    "gymnasium", 
    "imageio",
    "numpy", 
    "matplotlib",
    "optuna",
    "pettingzoo", 
    "seaborn",
    "stable-baselines3",
    "sb3-contrib",
    "torch",
    "tqdm"
]
authors = [
    {name = "Ben Whewell", email = "ben.whewell@pm.me"}
]
description = "Applying RL using Python and Gymnasium"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["reinforcement learning", "machine learning"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=discrete1 --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
